--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="wrapper">
     {% if page.layout == 'contact' %}
-      <span class="made-by">made with <img src="https://s.w.org/images/core/emoji/2.3/svg/2764.svg" alt="❤" class="heart"/> by <a href="https://github.com/brettinternet" target="_blank">brettinternet</a>
+      <span class="made-by"> Happy Hacking <img src="https://s.w.org/images/core/emoji/2.3/svg/2764.svg" alt="❤" class="heart"/> With Me.
       </span>
     {% else %}
       {% include contact-icons.html %}
