--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
@@ -24,7 +25,7 @@ layout: default
     <i class="fa fa-tags"></i>
     {% for tag in page.tags %}
       {% assign count = site.tags[tag].size %}
-      <a href="{{site.baseurl}}/tag/{{ tag }}">
+      <a href="/tag/{{ tag }}">
         <span class="tag">{{ tag | escape }}{% if count != 1 %}<span class="tag-count">({{ count }})</span>{% endif %}</span></a>
     {% endfor %}
   </div>
